# AEEE_Summer_lab1H

./: README.md
HLS_Prj/sobel_resize/: hls_config.cfg  run_hls.tcl  vivado.jou  xf_sobel_resize_accel.cpp  xf_sobel_resize_accel_config.h  xf_sobel_resize_tb.cpp
HLS_Prj/sobel_resize/config/: xf_config_params.h
HLS_Prj/sobel_resize/sobel_resize_xf/: hls.app
HLS_Prj/sobel_resize/sobel_resize_xf/sol2/: sol2.aps  sol2.directive  sol2_data.json
Jupyter_Prj/: Resize_Sobel.ipynb  sobel_resize.hwh
Lab1_ResizeSobel_vivadoprj/Lab1_sobel _max/: Lab1_sobel.xpr  vivado.jou  vivado_14798.backup.jou  vivado_67342.backup.jou  vivado_pid14798.str
Lab1_ResizeSobel_vivadoprj/Lab1_sobel _max/Lab1_sobel.cache/wt/: synthesis.wdf  webtalk_pa.xml
Lab1_ResizeSobel_vivadoprj/Lab1_sobel _max/Lab1_sobel.ip_user_files/mem_init_files/: sobel.mdd
Lab1_ResizeSobel_vivadoprj/Lab1_sobel _max/Lab1_sobel.ip_user_files/sim_scripts/sobel/xcelium/: CMakeLists.txt  sobel.sh
Lab1_ResizeSobel_vivadoprj/Lab1_sobel _max/Lab1_sobel.runs/.jobs/: vrs_config_1.xml  vrs_config_2.xml  vrs_config_3.xml  vrs_config_4.xml  vrs_config_5.xml  vrs_config_6.xml  vrs_config_7.xml
Lab1_ResizeSobel_vivadoprj/Lab1_sobel _max/Lab1_sobel.runs/impl_1/: .route_design.begin.rst  .vivado.begin.rst  .write_bitstream.begin.rst  clockInfo.txt  gen_run.xml  htr.txt  init_design.pb  opt_design.pb  phys_opt_design.pb  place_design.pb  route_design.pb  rundef.js  runme.sh  sobel_wrapper.bit  sobel_wrapper.tcl  sobel_wrapper.vdi  sobel_wrapper_17994.backup.vdi  sobel_wrapper_bus_skew_routed.rpt  sobel_wrapper_drc_opted.rpt  (+22 more)
(+1390 files in other folders)
